src/objects/ProjectAttachments__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <label>AttachmentType</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Att 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Att 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Att 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>ProjectAttachments</relationshipLabel>
        <relationshipName>ProjectAttachments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>ProjectAttachment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProjectAttachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectAttachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>